<resources>
    <string name="app_name">Life Points Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game">New Game</string>
    <string name="initial_life_points">8000</string>
    <string name="play_name">Play</string>
    <string name="options">Options</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_one_player">Life Points Calculator</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_two_player">TwoPlayerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_multi_player">MultiPlayerActivity</string>

    <string name="pref_life_points_key">lifePointsKey</string>
    <string name="pref_life_points_title">lifePointsTitle</string>
    <string name="pref_life_points_default">8000</string>

    <string name="pref_life_points_key_50">lifePointsKey50</string>
    <string name="pref_life_points_title_50">lifePointsTitle50</string>
    <string name="pref_life_points_default_50">50</string>

    <string name="pref_life_points_key_100">lifePointsKey100</string>
    <string name="pref_life_points_title_100">lifePointsTitle100</string>
    <string name="pref_life_points_default_100">100</string>

    <string name="pref_life_points_key_500">lifePointsKey500</string>
    <string name="pref_life_points_title_500">lifePointsTitle500</string>
    <string name="pref_life_points_default_500">500</string>

    <string name="pref_life_points_key_1000">lifePointsKey1000</string>
    <string name="pref_life_points_title_1000">lifePointsTitle1000</string>
    <string name="pref_life_points_default_1000">1000</string>

    <string name="pref_name_key_player1">player1Key</string>
    <string name="pref_title_player1">player1Title</string>
    <string name="pref_default_player1">Player 1</string>

    <string name="pref_name_key_player2">player2Key</string>
    <string name="pref_title_player2">player2Title</string>
    <string name="pref_default_player2">Player 2</string>

    <string name="pref_name_key_player3">player3Key</string>
    <string name="pref_title_player3">player3Title</string>
    <string name="pref_default_player3">Player 3</string>

    <string name="pref_name_key_player4">player4Key</string>
    <string name="pref_title_player4">player4Title</string>
    <string name="pref_default_player4">Player 4</string>

    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_option">OptionActivity</string>

    <string name="first_player_transition">fpt</string>
    <string name="second_player_transition">spt</string>
    <string name="third_player_transition">tpt</string>
    <string name="fourth_player_transition">fopt</string>
    <string name="start_transition">startT</string>
    <string name="options_transition">optionsT</string>

    <style name="main_ad_id">ca-app-pub-5716255329259577/3760491244</style>
    <string name="banner_ad_id_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="first_player_lp">FPLP</string>
    <string name="second_player_lp">SPLP</string>
    <string name="third_player_lp">TPLP</string>
    <string name="fourth_player_lp">FoPLP</string>
</resources>
