<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<CheckBoxPreference-->
        <!--android:key="example_checkbox"-->
        <!--android:title="@string/pref_title_social_recommendations"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:defaultValue="true" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_life_points_key"
        android:title="@string/pref_life_points_title"
        android:defaultValue="@string/pref_life_points_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_life_points_key_50"
        android:title="@string/pref_life_points_title_50"
        android:defaultValue="@string/pref_life_points_default_50"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_life_points_key_100"
        android:title="@string/pref_life_points_title_100"
        android:defaultValue="@string/pref_life_points_default_100"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_life_points_key_500"
        android:title="@string/pref_life_points_title_500"
        android:defaultValue="@string/pref_life_points_default_500"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_life_points_key_1000"
        android:title="@string/pref_life_points_title_1000"
        android:defaultValue="@string/pref_life_points_default_1000"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_name_key_player1"
        android:title="@string/pref_title_player1"
        android:defaultValue="@string/pref_default_player1"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_name_key_player2"
        android:title="@string/pref_title_player2"
        android:defaultValue="@string/pref_default_player2"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_name_key_player3"
        android:title="@string/pref_title_player3"
        android:defaultValue="@string/pref_default_player3"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_name_key_player4"
        android:title="@string/pref_title_player4"
        android:defaultValue="@string/pref_default_player4"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:key="@string/pref_units_key"-->
        <!--android:title="@string/pref_unit_label"-->
        <!--android:defaultValue="@string/pref_units_metric"-->
        <!--android:entries="@array/pref_unit_options"-->
        <!--android:entryValues="@array/pref_unit_values"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null" />-->

</PreferenceScreen>
